changes in uae pass module for custom fields.